feat: implement token management with Redis, add token exception handling